crates/flowlog-build/tests/errors/parser/type_decl_unknown_parent.dl
.type X = NoSuchType
.decl R(x: X)
R(1).
